compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__desugar_use_expression_other_module.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\nimport result\n\npub fn main() {\n  use <- result.lazy\n  2\n}\n"
---
import result

pub fn main() {
  result.lazy(fn() {
    2
  })
}
