compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__desugar_use_expression_simple.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn main() {\n  use <- wobble()\n  3\n}\n\nfn wobble(b: fn() -> Int) {\n  Nil\n}\n"
---
pub fn main() {
  wobble(fn() {
    3
  })
}

fn wobble(b: fn() -> Int) {
  Nil
}
