compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__desugar_use_expression_tuple.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn main() {\n  let tuple = #(fn(cb: fn() -> Int) { cb() + 1 })\n\n  use <- tuple.0\n\n  2\n}\n"
---
pub fn main() {
  let tuple = #(fn(cb: fn() -> Int) { cb() + 1 })

  tuple.0(fn() {

    2
  })
}
